tests/agl/rejections/parse/open_stmt_in_inline_try.agl
try let x = 1; if true => pass | else => pass catch _ => pass
